parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> script
Rule 1     script -> SCRIPT ID variables states
Rule 2     variables -> VARIABLE vars ENDVARIABLE
Rule 3     vars -> var
Rule 4     vars -> vars var
Rule 5     var -> ID REAL VAR
Rule 6     var -> ID INTEGER VAR
Rule 7     var -> ID TEXT STR
Rule 8     states -> state
Rule 9     states -> states state
Rule 10    state -> STATE ID expressions ENDSTATE
Rule 11    expressions -> expression
Rule 12    expressions -> expressions expression
Rule 13    expression -> switch
Rule 14    expression -> speak
Rule 15    expression -> goto
Rule 16    expression -> timeout
Rule 17    expression -> exit
Rule 18    expression -> update
Rule 19    update -> UPDATE ID = terms
Rule 20    switch -> SWITCH cases default
Rule 21    cases -> case
Rule 22    cases -> cases case
Rule 23    case -> CASE STR expressions
Rule 24    case -> CASE RETURN expressions
Rule 25    speak -> SPEAK terms
Rule 26    terms -> term
Rule 27    terms -> terms + term
Rule 28    terms -> term PLUS term
Rule 29    terms -> term MINUS term
Rule 30    term -> STR
Rule 31    term -> VAR
Rule 32    term -> ID
Rule 33    term -> RETURN
Rule 34    goto -> GOTO ID
Rule 35    timeout -> TIMEOUT VAR expressions ENDTIMEOUT
Rule 36    default -> DEFAULT expressions ENDSWITCH
Rule 37    default -> ENDSWITCH
Rule 38    exit -> EXIT

Terminals, with rules where they appear

+                    : 27
=                    : 19
CASE                 : 23 24
DEFAULT              : 36
ENDSTATE             : 10
ENDSWITCH            : 36 37
ENDTIMEOUT           : 35
ENDVARIABLE          : 2
EXIT                 : 38
GOTO                 : 34
ID                   : 1 5 6 7 10 19 32 34
INTEGER              : 6
MINUS                : 29
PLUS                 : 28
REAL                 : 5
RETURN               : 24 33
SCRIPT               : 1
SPEAK                : 25
STATE                : 10
STR                  : 7 23 30
SWITCH               : 20
TEXT                 : 7
TIMEOUT              : 35
UPDATE               : 19
VAR                  : 5 6 31 35
VARIABLE             : 2
error                : 

Nonterminals, with rules where they appear

case                 : 21 22
cases                : 20 22
default              : 20
exit                 : 17
expression           : 11 12
expressions          : 10 12 23 24 35 36
goto                 : 15
script               : 0
speak                : 14
state                : 8 9
states               : 1 9
switch               : 13
term                 : 26 27 28 28 29 29
terms                : 19 25 27
timeout              : 16
update               : 18
var                  : 3 4
variables            : 1
vars                 : 2 4

Parsing method: LALR

state 0

    (0) S' -> . script
    (1) script -> . SCRIPT ID variables states

    SCRIPT          shift and go to state 2

    script                         shift and go to state 1

state 1

    (0) S' -> script .



state 2

    (1) script -> SCRIPT . ID variables states

    ID              shift and go to state 3


state 3

    (1) script -> SCRIPT ID . variables states
    (2) variables -> . VARIABLE vars ENDVARIABLE

    VARIABLE        shift and go to state 5

    variables                      shift and go to state 4

state 4

    (1) script -> SCRIPT ID variables . states
    (8) states -> . state
    (9) states -> . states state
    (10) state -> . STATE ID expressions ENDSTATE

    STATE           shift and go to state 8

    states                         shift and go to state 6
    state                          shift and go to state 7

state 5

    (2) variables -> VARIABLE . vars ENDVARIABLE
    (3) vars -> . var
    (4) vars -> . vars var
    (5) var -> . ID REAL VAR
    (6) var -> . ID INTEGER VAR
    (7) var -> . ID TEXT STR

    ID              shift and go to state 11

    vars                           shift and go to state 9
    var                            shift and go to state 10

state 6

    (1) script -> SCRIPT ID variables states .
    (9) states -> states . state
    (10) state -> . STATE ID expressions ENDSTATE

    $end            reduce using rule 1 (script -> SCRIPT ID variables states .)
    STATE           shift and go to state 8

    state                          shift and go to state 12

state 7

    (8) states -> state .

    STATE           reduce using rule 8 (states -> state .)
    $end            reduce using rule 8 (states -> state .)


state 8

    (10) state -> STATE . ID expressions ENDSTATE

    ID              shift and go to state 13


state 9

    (2) variables -> VARIABLE vars . ENDVARIABLE
    (4) vars -> vars . var
    (5) var -> . ID REAL VAR
    (6) var -> . ID INTEGER VAR
    (7) var -> . ID TEXT STR

    ENDVARIABLE     shift and go to state 14
    ID              shift and go to state 11

    var                            shift and go to state 15

state 10

    (3) vars -> var .

    ENDVARIABLE     reduce using rule 3 (vars -> var .)
    ID              reduce using rule 3 (vars -> var .)


state 11

    (5) var -> ID . REAL VAR
    (6) var -> ID . INTEGER VAR
    (7) var -> ID . TEXT STR

    REAL            shift and go to state 16
    INTEGER         shift and go to state 17
    TEXT            shift and go to state 18


state 12

    (9) states -> states state .

    STATE           reduce using rule 9 (states -> states state .)
    $end            reduce using rule 9 (states -> states state .)


state 13

    (10) state -> STATE ID . expressions ENDSTATE
    (11) expressions -> . expression
    (12) expressions -> . expressions expression
    (13) expression -> . switch
    (14) expression -> . speak
    (15) expression -> . goto
    (16) expression -> . timeout
    (17) expression -> . exit
    (18) expression -> . update
    (20) switch -> . SWITCH cases default
    (25) speak -> . SPEAK terms
    (34) goto -> . GOTO ID
    (35) timeout -> . TIMEOUT VAR expressions ENDTIMEOUT
    (38) exit -> . EXIT
    (19) update -> . UPDATE ID = terms

    SWITCH          shift and go to state 27
    SPEAK           shift and go to state 28
    GOTO            shift and go to state 29
    TIMEOUT         shift and go to state 30
    EXIT            shift and go to state 31
    UPDATE          shift and go to state 32

    expressions                    shift and go to state 19
    expression                     shift and go to state 20
    switch                         shift and go to state 21
    speak                          shift and go to state 22
    goto                           shift and go to state 23
    timeout                        shift and go to state 24
    exit                           shift and go to state 25
    update                         shift and go to state 26

state 14

    (2) variables -> VARIABLE vars ENDVARIABLE .

    STATE           reduce using rule 2 (variables -> VARIABLE vars ENDVARIABLE .)


state 15

    (4) vars -> vars var .

    ENDVARIABLE     reduce using rule 4 (vars -> vars var .)
    ID              reduce using rule 4 (vars -> vars var .)


state 16

    (5) var -> ID REAL . VAR

    VAR             shift and go to state 33


state 17

    (6) var -> ID INTEGER . VAR

    VAR             shift and go to state 34


state 18

    (7) var -> ID TEXT . STR

    STR             shift and go to state 35


state 19

    (10) state -> STATE ID expressions . ENDSTATE
    (12) expressions -> expressions . expression
    (13) expression -> . switch
    (14) expression -> . speak
    (15) expression -> . goto
    (16) expression -> . timeout
    (17) expression -> . exit
    (18) expression -> . update
    (20) switch -> . SWITCH cases default
    (25) speak -> . SPEAK terms
    (34) goto -> . GOTO ID
    (35) timeout -> . TIMEOUT VAR expressions ENDTIMEOUT
    (38) exit -> . EXIT
    (19) update -> . UPDATE ID = terms

    ENDSTATE        shift and go to state 36
    SWITCH          shift and go to state 27
    SPEAK           shift and go to state 28
    GOTO            shift and go to state 29
    TIMEOUT         shift and go to state 30
    EXIT            shift and go to state 31
    UPDATE          shift and go to state 32

    expression                     shift and go to state 37
    switch                         shift and go to state 21
    speak                          shift and go to state 22
    goto                           shift and go to state 23
    timeout                        shift and go to state 24
    exit                           shift and go to state 25
    update                         shift and go to state 26

state 20

    (11) expressions -> expression .

    ENDSTATE        reduce using rule 11 (expressions -> expression .)
    SWITCH          reduce using rule 11 (expressions -> expression .)
    SPEAK           reduce using rule 11 (expressions -> expression .)
    GOTO            reduce using rule 11 (expressions -> expression .)
    TIMEOUT         reduce using rule 11 (expressions -> expression .)
    EXIT            reduce using rule 11 (expressions -> expression .)
    UPDATE          reduce using rule 11 (expressions -> expression .)
    ENDTIMEOUT      reduce using rule 11 (expressions -> expression .)
    ENDSWITCH       reduce using rule 11 (expressions -> expression .)
    DEFAULT         reduce using rule 11 (expressions -> expression .)
    CASE            reduce using rule 11 (expressions -> expression .)


state 21

    (13) expression -> switch .

    ENDSTATE        reduce using rule 13 (expression -> switch .)
    SWITCH          reduce using rule 13 (expression -> switch .)
    SPEAK           reduce using rule 13 (expression -> switch .)
    GOTO            reduce using rule 13 (expression -> switch .)
    TIMEOUT         reduce using rule 13 (expression -> switch .)
    EXIT            reduce using rule 13 (expression -> switch .)
    UPDATE          reduce using rule 13 (expression -> switch .)
    ENDTIMEOUT      reduce using rule 13 (expression -> switch .)
    ENDSWITCH       reduce using rule 13 (expression -> switch .)
    DEFAULT         reduce using rule 13 (expression -> switch .)
    CASE            reduce using rule 13 (expression -> switch .)


state 22

    (14) expression -> speak .

    ENDSTATE        reduce using rule 14 (expression -> speak .)
    SWITCH          reduce using rule 14 (expression -> speak .)
    SPEAK           reduce using rule 14 (expression -> speak .)
    GOTO            reduce using rule 14 (expression -> speak .)
    TIMEOUT         reduce using rule 14 (expression -> speak .)
    EXIT            reduce using rule 14 (expression -> speak .)
    UPDATE          reduce using rule 14 (expression -> speak .)
    ENDTIMEOUT      reduce using rule 14 (expression -> speak .)
    ENDSWITCH       reduce using rule 14 (expression -> speak .)
    DEFAULT         reduce using rule 14 (expression -> speak .)
    CASE            reduce using rule 14 (expression -> speak .)


state 23

    (15) expression -> goto .

    ENDSTATE        reduce using rule 15 (expression -> goto .)
    SWITCH          reduce using rule 15 (expression -> goto .)
    SPEAK           reduce using rule 15 (expression -> goto .)
    GOTO            reduce using rule 15 (expression -> goto .)
    TIMEOUT         reduce using rule 15 (expression -> goto .)
    EXIT            reduce using rule 15 (expression -> goto .)
    UPDATE          reduce using rule 15 (expression -> goto .)
    ENDTIMEOUT      reduce using rule 15 (expression -> goto .)
    ENDSWITCH       reduce using rule 15 (expression -> goto .)
    DEFAULT         reduce using rule 15 (expression -> goto .)
    CASE            reduce using rule 15 (expression -> goto .)


state 24

    (16) expression -> timeout .

    ENDSTATE        reduce using rule 16 (expression -> timeout .)
    SWITCH          reduce using rule 16 (expression -> timeout .)
    SPEAK           reduce using rule 16 (expression -> timeout .)
    GOTO            reduce using rule 16 (expression -> timeout .)
    TIMEOUT         reduce using rule 16 (expression -> timeout .)
    EXIT            reduce using rule 16 (expression -> timeout .)
    UPDATE          reduce using rule 16 (expression -> timeout .)
    ENDTIMEOUT      reduce using rule 16 (expression -> timeout .)
    ENDSWITCH       reduce using rule 16 (expression -> timeout .)
    DEFAULT         reduce using rule 16 (expression -> timeout .)
    CASE            reduce using rule 16 (expression -> timeout .)


state 25

    (17) expression -> exit .

    ENDSTATE        reduce using rule 17 (expression -> exit .)
    SWITCH          reduce using rule 17 (expression -> exit .)
    SPEAK           reduce using rule 17 (expression -> exit .)
    GOTO            reduce using rule 17 (expression -> exit .)
    TIMEOUT         reduce using rule 17 (expression -> exit .)
    EXIT            reduce using rule 17 (expression -> exit .)
    UPDATE          reduce using rule 17 (expression -> exit .)
    ENDTIMEOUT      reduce using rule 17 (expression -> exit .)
    ENDSWITCH       reduce using rule 17 (expression -> exit .)
    DEFAULT         reduce using rule 17 (expression -> exit .)
    CASE            reduce using rule 17 (expression -> exit .)


state 26

    (18) expression -> update .

    ENDSTATE        reduce using rule 18 (expression -> update .)
    SWITCH          reduce using rule 18 (expression -> update .)
    SPEAK           reduce using rule 18 (expression -> update .)
    GOTO            reduce using rule 18 (expression -> update .)
    TIMEOUT         reduce using rule 18 (expression -> update .)
    EXIT            reduce using rule 18 (expression -> update .)
    UPDATE          reduce using rule 18 (expression -> update .)
    ENDTIMEOUT      reduce using rule 18 (expression -> update .)
    ENDSWITCH       reduce using rule 18 (expression -> update .)
    DEFAULT         reduce using rule 18 (expression -> update .)
    CASE            reduce using rule 18 (expression -> update .)


state 27

    (20) switch -> SWITCH . cases default
    (21) cases -> . case
    (22) cases -> . cases case
    (23) case -> . CASE STR expressions
    (24) case -> . CASE RETURN expressions

    CASE            shift and go to state 40

    cases                          shift and go to state 38
    case                           shift and go to state 39

state 28

    (25) speak -> SPEAK . terms
    (26) terms -> . term
    (27) terms -> . terms + term
    (28) terms -> . term PLUS term
    (29) terms -> . term MINUS term
    (30) term -> . STR
    (31) term -> . VAR
    (32) term -> . ID
    (33) term -> . RETURN

    STR             shift and go to state 43
    VAR             shift and go to state 44
    ID              shift and go to state 45
    RETURN          shift and go to state 46

    terms                          shift and go to state 41
    term                           shift and go to state 42

state 29

    (34) goto -> GOTO . ID

    ID              shift and go to state 47


state 30

    (35) timeout -> TIMEOUT . VAR expressions ENDTIMEOUT

    VAR             shift and go to state 48


state 31

    (38) exit -> EXIT .

    ENDSTATE        reduce using rule 38 (exit -> EXIT .)
    SWITCH          reduce using rule 38 (exit -> EXIT .)
    SPEAK           reduce using rule 38 (exit -> EXIT .)
    GOTO            reduce using rule 38 (exit -> EXIT .)
    TIMEOUT         reduce using rule 38 (exit -> EXIT .)
    EXIT            reduce using rule 38 (exit -> EXIT .)
    UPDATE          reduce using rule 38 (exit -> EXIT .)
    ENDTIMEOUT      reduce using rule 38 (exit -> EXIT .)
    ENDSWITCH       reduce using rule 38 (exit -> EXIT .)
    DEFAULT         reduce using rule 38 (exit -> EXIT .)
    CASE            reduce using rule 38 (exit -> EXIT .)


state 32

    (19) update -> UPDATE . ID = terms

    ID              shift and go to state 49


state 33

    (5) var -> ID REAL VAR .

    ENDVARIABLE     reduce using rule 5 (var -> ID REAL VAR .)
    ID              reduce using rule 5 (var -> ID REAL VAR .)


state 34

    (6) var -> ID INTEGER VAR .

    ENDVARIABLE     reduce using rule 6 (var -> ID INTEGER VAR .)
    ID              reduce using rule 6 (var -> ID INTEGER VAR .)


state 35

    (7) var -> ID TEXT STR .

    ENDVARIABLE     reduce using rule 7 (var -> ID TEXT STR .)
    ID              reduce using rule 7 (var -> ID TEXT STR .)


state 36

    (10) state -> STATE ID expressions ENDSTATE .

    STATE           reduce using rule 10 (state -> STATE ID expressions ENDSTATE .)
    $end            reduce using rule 10 (state -> STATE ID expressions ENDSTATE .)


state 37

    (12) expressions -> expressions expression .

    ENDSTATE        reduce using rule 12 (expressions -> expressions expression .)
    SWITCH          reduce using rule 12 (expressions -> expressions expression .)
    SPEAK           reduce using rule 12 (expressions -> expressions expression .)
    GOTO            reduce using rule 12 (expressions -> expressions expression .)
    TIMEOUT         reduce using rule 12 (expressions -> expressions expression .)
    EXIT            reduce using rule 12 (expressions -> expressions expression .)
    UPDATE          reduce using rule 12 (expressions -> expressions expression .)
    ENDTIMEOUT      reduce using rule 12 (expressions -> expressions expression .)
    ENDSWITCH       reduce using rule 12 (expressions -> expressions expression .)
    DEFAULT         reduce using rule 12 (expressions -> expressions expression .)
    CASE            reduce using rule 12 (expressions -> expressions expression .)


state 38

    (20) switch -> SWITCH cases . default
    (22) cases -> cases . case
    (36) default -> . DEFAULT expressions ENDSWITCH
    (37) default -> . ENDSWITCH
    (23) case -> . CASE STR expressions
    (24) case -> . CASE RETURN expressions

    DEFAULT         shift and go to state 52
    ENDSWITCH       shift and go to state 53
    CASE            shift and go to state 40

    default                        shift and go to state 50
    case                           shift and go to state 51

state 39

    (21) cases -> case .

    DEFAULT         reduce using rule 21 (cases -> case .)
    ENDSWITCH       reduce using rule 21 (cases -> case .)
    CASE            reduce using rule 21 (cases -> case .)


state 40

    (23) case -> CASE . STR expressions
    (24) case -> CASE . RETURN expressions

    STR             shift and go to state 54
    RETURN          shift and go to state 55


state 41

    (25) speak -> SPEAK terms .
    (27) terms -> terms . + term

    ENDSTATE        reduce using rule 25 (speak -> SPEAK terms .)
    SWITCH          reduce using rule 25 (speak -> SPEAK terms .)
    SPEAK           reduce using rule 25 (speak -> SPEAK terms .)
    GOTO            reduce using rule 25 (speak -> SPEAK terms .)
    TIMEOUT         reduce using rule 25 (speak -> SPEAK terms .)
    EXIT            reduce using rule 25 (speak -> SPEAK terms .)
    UPDATE          reduce using rule 25 (speak -> SPEAK terms .)
    ENDTIMEOUT      reduce using rule 25 (speak -> SPEAK terms .)
    ENDSWITCH       reduce using rule 25 (speak -> SPEAK terms .)
    DEFAULT         reduce using rule 25 (speak -> SPEAK terms .)
    CASE            reduce using rule 25 (speak -> SPEAK terms .)
    +               shift and go to state 56


state 42

    (26) terms -> term .
    (28) terms -> term . PLUS term
    (29) terms -> term . MINUS term

    +               reduce using rule 26 (terms -> term .)
    ENDSTATE        reduce using rule 26 (terms -> term .)
    SWITCH          reduce using rule 26 (terms -> term .)
    SPEAK           reduce using rule 26 (terms -> term .)
    GOTO            reduce using rule 26 (terms -> term .)
    TIMEOUT         reduce using rule 26 (terms -> term .)
    EXIT            reduce using rule 26 (terms -> term .)
    UPDATE          reduce using rule 26 (terms -> term .)
    ENDTIMEOUT      reduce using rule 26 (terms -> term .)
    ENDSWITCH       reduce using rule 26 (terms -> term .)
    DEFAULT         reduce using rule 26 (terms -> term .)
    CASE            reduce using rule 26 (terms -> term .)
    PLUS            shift and go to state 57
    MINUS           shift and go to state 58


state 43

    (30) term -> STR .

    PLUS            reduce using rule 30 (term -> STR .)
    MINUS           reduce using rule 30 (term -> STR .)
    +               reduce using rule 30 (term -> STR .)
    ENDSTATE        reduce using rule 30 (term -> STR .)
    SWITCH          reduce using rule 30 (term -> STR .)
    SPEAK           reduce using rule 30 (term -> STR .)
    GOTO            reduce using rule 30 (term -> STR .)
    TIMEOUT         reduce using rule 30 (term -> STR .)
    EXIT            reduce using rule 30 (term -> STR .)
    UPDATE          reduce using rule 30 (term -> STR .)
    ENDTIMEOUT      reduce using rule 30 (term -> STR .)
    ENDSWITCH       reduce using rule 30 (term -> STR .)
    DEFAULT         reduce using rule 30 (term -> STR .)
    CASE            reduce using rule 30 (term -> STR .)


state 44

    (31) term -> VAR .

    PLUS            reduce using rule 31 (term -> VAR .)
    MINUS           reduce using rule 31 (term -> VAR .)
    +               reduce using rule 31 (term -> VAR .)
    ENDSTATE        reduce using rule 31 (term -> VAR .)
    SWITCH          reduce using rule 31 (term -> VAR .)
    SPEAK           reduce using rule 31 (term -> VAR .)
    GOTO            reduce using rule 31 (term -> VAR .)
    TIMEOUT         reduce using rule 31 (term -> VAR .)
    EXIT            reduce using rule 31 (term -> VAR .)
    UPDATE          reduce using rule 31 (term -> VAR .)
    ENDTIMEOUT      reduce using rule 31 (term -> VAR .)
    ENDSWITCH       reduce using rule 31 (term -> VAR .)
    DEFAULT         reduce using rule 31 (term -> VAR .)
    CASE            reduce using rule 31 (term -> VAR .)


state 45

    (32) term -> ID .

    PLUS            reduce using rule 32 (term -> ID .)
    MINUS           reduce using rule 32 (term -> ID .)
    +               reduce using rule 32 (term -> ID .)
    ENDSTATE        reduce using rule 32 (term -> ID .)
    SWITCH          reduce using rule 32 (term -> ID .)
    SPEAK           reduce using rule 32 (term -> ID .)
    GOTO            reduce using rule 32 (term -> ID .)
    TIMEOUT         reduce using rule 32 (term -> ID .)
    EXIT            reduce using rule 32 (term -> ID .)
    UPDATE          reduce using rule 32 (term -> ID .)
    ENDTIMEOUT      reduce using rule 32 (term -> ID .)
    ENDSWITCH       reduce using rule 32 (term -> ID .)
    DEFAULT         reduce using rule 32 (term -> ID .)
    CASE            reduce using rule 32 (term -> ID .)


state 46

    (33) term -> RETURN .

    PLUS            reduce using rule 33 (term -> RETURN .)
    MINUS           reduce using rule 33 (term -> RETURN .)
    +               reduce using rule 33 (term -> RETURN .)
    ENDSTATE        reduce using rule 33 (term -> RETURN .)
    SWITCH          reduce using rule 33 (term -> RETURN .)
    SPEAK           reduce using rule 33 (term -> RETURN .)
    GOTO            reduce using rule 33 (term -> RETURN .)
    TIMEOUT         reduce using rule 33 (term -> RETURN .)
    EXIT            reduce using rule 33 (term -> RETURN .)
    UPDATE          reduce using rule 33 (term -> RETURN .)
    ENDTIMEOUT      reduce using rule 33 (term -> RETURN .)
    ENDSWITCH       reduce using rule 33 (term -> RETURN .)
    DEFAULT         reduce using rule 33 (term -> RETURN .)
    CASE            reduce using rule 33 (term -> RETURN .)


state 47

    (34) goto -> GOTO ID .

    ENDSTATE        reduce using rule 34 (goto -> GOTO ID .)
    SWITCH          reduce using rule 34 (goto -> GOTO ID .)
    SPEAK           reduce using rule 34 (goto -> GOTO ID .)
    GOTO            reduce using rule 34 (goto -> GOTO ID .)
    TIMEOUT         reduce using rule 34 (goto -> GOTO ID .)
    EXIT            reduce using rule 34 (goto -> GOTO ID .)
    UPDATE          reduce using rule 34 (goto -> GOTO ID .)
    ENDTIMEOUT      reduce using rule 34 (goto -> GOTO ID .)
    ENDSWITCH       reduce using rule 34 (goto -> GOTO ID .)
    DEFAULT         reduce using rule 34 (goto -> GOTO ID .)
    CASE            reduce using rule 34 (goto -> GOTO ID .)


state 48

    (35) timeout -> TIMEOUT VAR . expressions ENDTIMEOUT
    (11) expressions -> . expression
    (12) expressions -> . expressions expression
    (13) expression -> . switch
    (14) expression -> . speak
    (15) expression -> . goto
    (16) expression -> . timeout
    (17) expression -> . exit
    (18) expression -> . update
    (20) switch -> . SWITCH cases default
    (25) speak -> . SPEAK terms
    (34) goto -> . GOTO ID
    (35) timeout -> . TIMEOUT VAR expressions ENDTIMEOUT
    (38) exit -> . EXIT
    (19) update -> . UPDATE ID = terms

    SWITCH          shift and go to state 27
    SPEAK           shift and go to state 28
    GOTO            shift and go to state 29
    TIMEOUT         shift and go to state 30
    EXIT            shift and go to state 31
    UPDATE          shift and go to state 32

    expressions                    shift and go to state 59
    expression                     shift and go to state 20
    switch                         shift and go to state 21
    speak                          shift and go to state 22
    goto                           shift and go to state 23
    timeout                        shift and go to state 24
    exit                           shift and go to state 25
    update                         shift and go to state 26

state 49

    (19) update -> UPDATE ID . = terms

    =               shift and go to state 60


state 50

    (20) switch -> SWITCH cases default .

    ENDSTATE        reduce using rule 20 (switch -> SWITCH cases default .)
    SWITCH          reduce using rule 20 (switch -> SWITCH cases default .)
    SPEAK           reduce using rule 20 (switch -> SWITCH cases default .)
    GOTO            reduce using rule 20 (switch -> SWITCH cases default .)
    TIMEOUT         reduce using rule 20 (switch -> SWITCH cases default .)
    EXIT            reduce using rule 20 (switch -> SWITCH cases default .)
    UPDATE          reduce using rule 20 (switch -> SWITCH cases default .)
    ENDTIMEOUT      reduce using rule 20 (switch -> SWITCH cases default .)
    ENDSWITCH       reduce using rule 20 (switch -> SWITCH cases default .)
    DEFAULT         reduce using rule 20 (switch -> SWITCH cases default .)
    CASE            reduce using rule 20 (switch -> SWITCH cases default .)


state 51

    (22) cases -> cases case .

    DEFAULT         reduce using rule 22 (cases -> cases case .)
    ENDSWITCH       reduce using rule 22 (cases -> cases case .)
    CASE            reduce using rule 22 (cases -> cases case .)


state 52

    (36) default -> DEFAULT . expressions ENDSWITCH
    (11) expressions -> . expression
    (12) expressions -> . expressions expression
    (13) expression -> . switch
    (14) expression -> . speak
    (15) expression -> . goto
    (16) expression -> . timeout
    (17) expression -> . exit
    (18) expression -> . update
    (20) switch -> . SWITCH cases default
    (25) speak -> . SPEAK terms
    (34) goto -> . GOTO ID
    (35) timeout -> . TIMEOUT VAR expressions ENDTIMEOUT
    (38) exit -> . EXIT
    (19) update -> . UPDATE ID = terms

    SWITCH          shift and go to state 27
    SPEAK           shift and go to state 28
    GOTO            shift and go to state 29
    TIMEOUT         shift and go to state 30
    EXIT            shift and go to state 31
    UPDATE          shift and go to state 32

    expressions                    shift and go to state 61
    expression                     shift and go to state 20
    switch                         shift and go to state 21
    speak                          shift and go to state 22
    goto                           shift and go to state 23
    timeout                        shift and go to state 24
    exit                           shift and go to state 25
    update                         shift and go to state 26

state 53

    (37) default -> ENDSWITCH .

    ENDSTATE        reduce using rule 37 (default -> ENDSWITCH .)
    SWITCH          reduce using rule 37 (default -> ENDSWITCH .)
    SPEAK           reduce using rule 37 (default -> ENDSWITCH .)
    GOTO            reduce using rule 37 (default -> ENDSWITCH .)
    TIMEOUT         reduce using rule 37 (default -> ENDSWITCH .)
    EXIT            reduce using rule 37 (default -> ENDSWITCH .)
    UPDATE          reduce using rule 37 (default -> ENDSWITCH .)
    ENDTIMEOUT      reduce using rule 37 (default -> ENDSWITCH .)
    ENDSWITCH       reduce using rule 37 (default -> ENDSWITCH .)
    DEFAULT         reduce using rule 37 (default -> ENDSWITCH .)
    CASE            reduce using rule 37 (default -> ENDSWITCH .)


state 54

    (23) case -> CASE STR . expressions
    (11) expressions -> . expression
    (12) expressions -> . expressions expression
    (13) expression -> . switch
    (14) expression -> . speak
    (15) expression -> . goto
    (16) expression -> . timeout
    (17) expression -> . exit
    (18) expression -> . update
    (20) switch -> . SWITCH cases default
    (25) speak -> . SPEAK terms
    (34) goto -> . GOTO ID
    (35) timeout -> . TIMEOUT VAR expressions ENDTIMEOUT
    (38) exit -> . EXIT
    (19) update -> . UPDATE ID = terms

    SWITCH          shift and go to state 27
    SPEAK           shift and go to state 28
    GOTO            shift and go to state 29
    TIMEOUT         shift and go to state 30
    EXIT            shift and go to state 31
    UPDATE          shift and go to state 32

    expressions                    shift and go to state 62
    expression                     shift and go to state 20
    switch                         shift and go to state 21
    speak                          shift and go to state 22
    goto                           shift and go to state 23
    timeout                        shift and go to state 24
    exit                           shift and go to state 25
    update                         shift and go to state 26

state 55

    (24) case -> CASE RETURN . expressions
    (11) expressions -> . expression
    (12) expressions -> . expressions expression
    (13) expression -> . switch
    (14) expression -> . speak
    (15) expression -> . goto
    (16) expression -> . timeout
    (17) expression -> . exit
    (18) expression -> . update
    (20) switch -> . SWITCH cases default
    (25) speak -> . SPEAK terms
    (34) goto -> . GOTO ID
    (35) timeout -> . TIMEOUT VAR expressions ENDTIMEOUT
    (38) exit -> . EXIT
    (19) update -> . UPDATE ID = terms

    SWITCH          shift and go to state 27
    SPEAK           shift and go to state 28
    GOTO            shift and go to state 29
    TIMEOUT         shift and go to state 30
    EXIT            shift and go to state 31
    UPDATE          shift and go to state 32

    expressions                    shift and go to state 63
    expression                     shift and go to state 20
    switch                         shift and go to state 21
    speak                          shift and go to state 22
    goto                           shift and go to state 23
    timeout                        shift and go to state 24
    exit                           shift and go to state 25
    update                         shift and go to state 26

state 56

    (27) terms -> terms + . term
    (30) term -> . STR
    (31) term -> . VAR
    (32) term -> . ID
    (33) term -> . RETURN

    STR             shift and go to state 43
    VAR             shift and go to state 44
    ID              shift and go to state 45
    RETURN          shift and go to state 46

    term                           shift and go to state 64

state 57

    (28) terms -> term PLUS . term
    (30) term -> . STR
    (31) term -> . VAR
    (32) term -> . ID
    (33) term -> . RETURN

    STR             shift and go to state 43
    VAR             shift and go to state 44
    ID              shift and go to state 45
    RETURN          shift and go to state 46

    term                           shift and go to state 65

state 58

    (29) terms -> term MINUS . term
    (30) term -> . STR
    (31) term -> . VAR
    (32) term -> . ID
    (33) term -> . RETURN

    STR             shift and go to state 43
    VAR             shift and go to state 44
    ID              shift and go to state 45
    RETURN          shift and go to state 46

    term                           shift and go to state 66

state 59

    (35) timeout -> TIMEOUT VAR expressions . ENDTIMEOUT
    (12) expressions -> expressions . expression
    (13) expression -> . switch
    (14) expression -> . speak
    (15) expression -> . goto
    (16) expression -> . timeout
    (17) expression -> . exit
    (18) expression -> . update
    (20) switch -> . SWITCH cases default
    (25) speak -> . SPEAK terms
    (34) goto -> . GOTO ID
    (35) timeout -> . TIMEOUT VAR expressions ENDTIMEOUT
    (38) exit -> . EXIT
    (19) update -> . UPDATE ID = terms

    ENDTIMEOUT      shift and go to state 67
    SWITCH          shift and go to state 27
    SPEAK           shift and go to state 28
    GOTO            shift and go to state 29
    TIMEOUT         shift and go to state 30
    EXIT            shift and go to state 31
    UPDATE          shift and go to state 32

    expression                     shift and go to state 37
    switch                         shift and go to state 21
    speak                          shift and go to state 22
    goto                           shift and go to state 23
    timeout                        shift and go to state 24
    exit                           shift and go to state 25
    update                         shift and go to state 26

state 60

    (19) update -> UPDATE ID = . terms
    (26) terms -> . term
    (27) terms -> . terms + term
    (28) terms -> . term PLUS term
    (29) terms -> . term MINUS term
    (30) term -> . STR
    (31) term -> . VAR
    (32) term -> . ID
    (33) term -> . RETURN

    STR             shift and go to state 43
    VAR             shift and go to state 44
    ID              shift and go to state 45
    RETURN          shift and go to state 46

    terms                          shift and go to state 68
    term                           shift and go to state 42

state 61

    (36) default -> DEFAULT expressions . ENDSWITCH
    (12) expressions -> expressions . expression
    (13) expression -> . switch
    (14) expression -> . speak
    (15) expression -> . goto
    (16) expression -> . timeout
    (17) expression -> . exit
    (18) expression -> . update
    (20) switch -> . SWITCH cases default
    (25) speak -> . SPEAK terms
    (34) goto -> . GOTO ID
    (35) timeout -> . TIMEOUT VAR expressions ENDTIMEOUT
    (38) exit -> . EXIT
    (19) update -> . UPDATE ID = terms

    ENDSWITCH       shift and go to state 69
    SWITCH          shift and go to state 27
    SPEAK           shift and go to state 28
    GOTO            shift and go to state 29
    TIMEOUT         shift and go to state 30
    EXIT            shift and go to state 31
    UPDATE          shift and go to state 32

    expression                     shift and go to state 37
    switch                         shift and go to state 21
    speak                          shift and go to state 22
    goto                           shift and go to state 23
    timeout                        shift and go to state 24
    exit                           shift and go to state 25
    update                         shift and go to state 26

state 62
